Infraestructura/k8s/emqx/emqx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emqx
  labels:
    app: emqx
#  namespace: dash-iot
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      containers:
      - image: emqx/emqx:5.8-elixir
        name: emqx
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 8883  # Solo exponer el puerto seguro (MQTT over TLS)
          name: mqtts
        - containerPort: 18083  # Dashboard (opcional, si lo necesitas)
          name: dashboard
        volumeMounts:
        # - name: emqx-data
        #   mountPath: /opt/emqx/data
        - name: tls-certs
          mountPath: /etc/emqx/certs
          readOnly: true
      volumes:
      # - name: emqx-data
      #   persistentVolumeClaim:
      #     claimName: emqx-data-pvc
      - name: tls-certs
        secret:
          secretName: emqx-tls-secret
      restartPolicy: Always
