Infraestructura/k8s/emqx/emqx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - emqx.carlosvivas.dev
    secretName: cloudflare-tls
  rules:
  - host: emqx.carlosvivas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emqx-svc
            port:
              number: 18083
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: emqx-svc
            port:
              number: 8083
